# django-acorazado

./: .gitignore  BALANCE-JWT-CSRF.md  CONTRATO-AXIOS-BACKEND.md  FRONTEND-AXIOS.md  README.md  manage.py  pyproject.toml
backend/: asgi.py  urls.py  wsgi.py
backend/settings/: base.py  local.py  produccion.py
core/: authenticate.py  views.py
usuarios/: serializers.py  urls.py  views.py
